Add validation to user and sleep session. Add proper test to handle test case for the resources
