# swagger/v1/swagger.yaml
@@ -23,6 +23,12 @@ paths:
         required: true
         schema:
           type: integer
+      - name: Authorization
+        in: header
+        required: true
+        description: Basic Auth credentials
+        schema:
+          type: string
       responses:
         '201':
           description: created
@@ -31,23 +37,43 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-                  attributes:
+                  data:
                     type: object
                     properties:
                       id:
-                        type: integer
-                      start_time:
                         type: string
-                      end_time:
+                      type:
                         type: string
-                      duration:
-                        type: integer
-                      duration_text:
-                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          start_time:
+                            type: string
+                          end_time:
+                            type: string
+                            nullable: true
+                          duration:
+                            type: integer
+                            nullable: true
+                          duration_text:
+                            type: string
+                            nullable: true
+        '422':
+          description: unprocessable content
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      message:
+                        type: array
+                        example:
+                        - Cannot create new session while there is an active session
       requestBody:
         content:
           application/json:
@@ -77,29 +103,46 @@ paths:
           type: integer
       responses:
         '200':
-          description: ok
+          description: clock out success
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-                  attributes:
+                  data:
                     type: object
                     properties:
                       id:
-                        type: integer
-                      start_time:
                         type: string
-                      end_time:
+                      type:
                         type: string
-                      duration:
-                        type: integer
-                      duration_text:
-                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          start_time:
+                            type: string
+                          end_time:
+                            type: string
+                          duration:
+                            type: integer
+                          duration_text:
+                            type: string
+        '422':
+          description: clock out not processed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      message:
+                        type: array
+                        example:
+                        - End time must be greater than start time
       requestBody:
         content:
           application/json:
@@ -135,30 +178,35 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-                  attributes:
-                    type: object
-                    properties:
-                      id:
-                        type: integer
-                      start_time:
-                        type: string
-                      end_time:
-                        type: string
-                      duration:
-                        type: integer
-                      duration_text:
-                        type: string
-                      user:
-                        type: object
-                        properties:
-                          id:
-                            type: integer
-                          name:
-                            type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        type:
+                          type: string
+                        attributes:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            start_time:
+                              type: string
+                            end_time:
+                              type: string
+                            duration:
+                              type: integer
+                            duration_text:
+                              type: string
+                            user:
+                              type: object
+                              properties:
+                                id:
+                                  type: integer
+                                name:
+                                  type: string
   "/public/sleep_feeds":
     get:
       summary: All users's sleep activity
@@ -172,30 +220,35 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-                  attributes:
-                    type: object
-                    properties:
-                      id:
-                        type: integer
-                      start_time:
-                        type: string
-                      end_time:
-                        type: string
-                      duration:
-                        type: integer
-                      duration_text:
-                        type: string
-                      user:
-                        type: object
-                        properties:
-                          id:
-                            type: integer
-                          name:
-                            type: string
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        type:
+                          type: string
+                        attributes:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            start_time:
+                              type: string
+                            end_time:
+                              type: string
+                            duration:
+                              type: integer
+                            duration_text:
+                              type: string
+                            user:
+                              type: object
+                              properties:
+                                id:
+                                  type: integer
+                                name:
+                                  type: string
   "/private/users/{id}/sleep_sessions":
     get:
       summary: List of user's sleep sessions
@@ -214,27 +267,30 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                    type:
-                      type: string
-                    attributes:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
                       type: object
                       properties:
                         id:
-                          type: integer
-                        start_time:
                           type: string
-                        end_time:
+                        type:
                           type: string
-                        duration:
-                          type: integer
-                        duration_text:
-                          type: string
+                        attributes:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            start_time:
+                              type: string
+                            end_time:
+                              type: string
+                            duration:
+                              type: integer
+                            duration_text:
+                              type: string
   "/private/users/{user_id}/sleep_sessions/{id}":
     put:
       summary: Update existing sleep session
@@ -261,23 +317,41 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-                  attributes:
+                  data:
                     type: object
                     properties:
                       id:
-                        type: integer
-                      start_time:
                         type: string
-                      end_time:
+                      type:
                         type: string
-                      duration:
-                        type: integer
-                      duration_text:
-                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          start_time:
+                            type: string
+                          end_time:
+                            type: string
+                          duration:
+                            type: integer
+                          duration_text:
+                            type: string
+        '422':
+          description: unprocessed content when start_time and end_time nil
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      message:
+                        type: array
+                        example:
+                        - Start time can't be blank
+                        - End time can't be blank
       requestBody:
         content:
           application/json:
@@ -335,24 +409,41 @@ paths:
         schema:
           type: integer
       responses:
-        '200':
-          description: ok
+        '201':
+          description: created
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-                  attributes:
+                  data:
                     type: object
                     properties:
-                      followed_id:
-                        type: integer
-                      followed_name:
+                      id:
                         type: string
+                      type:
+                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          followed_id:
+                            type: integer
+                          followed_name:
+                            type: string
+        '422':
+          description: unprocessed content
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      message:
+                        type: array
+                        example:
+                        - Follower You are already following this user
   "/private/users/{id}/unfollow/{target_user_id}":
     delete:
       summary: Unfollow user
@@ -385,21 +476,24 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                    type:
-                      type: string
-                    attributes:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
                       type: object
                       properties:
                         id:
-                          type: integer
-                        name:
                           type: string
+                        type:
+                          type: string
+                        attributes:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            name:
+                              type: string
     post:
       summary: Create a user
       tags:
@@ -413,17 +507,34 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
-                    type: string
-                  type:
-                    type: string
-                  attributes:
+                  data:
                     type: object
                     properties:
                       id:
-                        type: integer
-                      name:
                         type: string
+                      type:
+                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          name:
+                            type: string
+        '422':
+          description: unprocessed content
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      message:
+                        type: array
+                        example:
+                        - Name can't be blank
       requestBody:
         content:
           application/json:
@@ -457,21 +568,24 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                    type:
-                      type: string
-                    attributes:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
                       type: object
                       properties:
                         id:
-                          type: integer
-                        name:
                           type: string
+                        type:
+                          type: string
+                        attributes:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            name:
+                              type: string
   "/private/users/{id}/following":
     get:
       summary: List of who followed by current user
@@ -490,21 +604,24 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                    type:
-                      type: string
-                    attributes:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
                       type: object
                       properties:
                         id:
-                          type: integer
-                        name:
                           type: string
+                        type:
+                          type: string
+                        attributes:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                            name:
+                              type: string
 servers:
 - url: http://{defaultHost}
   variables:
